create timeline in gsap

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <div class="flex justify-between items-center w-full px-20 h-24">
             <a href="index.html" class="font-bold text-3xl">OncoSmart</a>
             <ul class="flex justify-between w-2/5 text-xl max-lg:hidden">
-                <li><a href="#main" class="border-b-2 border-transparent hover:border-black">Home</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black">About</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black">Services</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black">Contact</a></li>
+                <li><a href="#main" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">About</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Services</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Contact</a></li>
             </ul>
             <img src="images/menu.png" alt="menu" class="hidden max-lg:block w-8" id="menu">
         </div>
         <div class="w-screen py-6 duration-1000 translate-y-[-300%] backdrop-blur-md transition-transform flex justify-between items-center bg-[#ffffff79]" id="menuList">
             <ul class="flex justify-between w-3/5 text-xl pl-20 max-md:w-[90%] max-md:pl-4 max-sm:flex-col max-sm:pl-20 max-sm:gap-4">
-                <li><a href="#main" class="border-b-2 border-transparent hover:border-black">Home</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black">About</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black">Services</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black">Contact</a></li>
+                <li><a href="#main" class="border-b-2 border-transparent hover:border-black menuitems">Home</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">About</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">Services</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">Contact</a></li>
             </ul>
             <img src="images/close.png" alt="close" class="w-12 pr-6" id="close">
         </div>
@@ -150,7 +150,7 @@
     <!-- gsap Lib -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="gsap.js"></script>
     <script src="script.js"></script>
+    <script src="gsap.js"></script>
 </body>
 </html>
