--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul class="flex justify-between w-2/5 text-xl max-lg:hidden">
                 <li><a href="#main" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">About</a></li>
+                <li><a href="./types.html" class="border-b-2 border-transparent hover:border-black anchor">Types</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Services</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Contact</a></li>
             </ul>
