Made registration pages

--- a/CancerTypes/types.html
+++ b/CancerTypes/types.html
@@ -13,11 +13,11 @@
     <!-- main section -->
     <div class="w-full h-[400px] bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] flex justify-start flex-col max-lg:h-full" id="main">
         <div class="flex justify-between items-center w-full px-20 h-24">
-            <a href="index.html" class="font-bold text-3xl">OncoSmart</a>
+            <a href="../index.html" class="font-bold text-3xl">OncoSmart</a>
             <ul class="flex justify-between w-2/5 text-xl max-lg:hidden">
-                <li><a href="./index.html" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
+                <li><a href="../index.html" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">About</a></li>
-                <li><a href="./types.html" class="border-b-2 border-transparent hover:border-black anchor">Types</a></li>
+                <li><a href="types.html" class="border-b-2 border-transparent hover:border-black anchor">Types</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Services</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Contact</a></li>
             </ul>
@@ -100,29 +100,26 @@
     </div>
 
     <br><br>
-
-    <div class="min-h-screen bg-gray-100">
-        <!-- Prevention Section -->
-        <div class="bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] py-24 px-8 h-100%">
-            <div class="w-4/5 mx-auto">
-                <h2 class="text-3xl font-bold mb-12 mt-4 text-center text-gray-800">Prevention Tips</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
-                    <div class="prevention-card">
-                        <h3 class="text-xl font-bold mb-4 text-gray-800">Regular Screening</h3>
-                        <p class="text-gray-600 leading-relaxed">Schedule regular check-ups and cancer screenings as recommended by your healthcare provider.</p>
-                    </div>
-                    <div class="prevention-card">
-                        <h3 class="text-xl font-bold mb-4 text-gray-800">Healthy Lifestyle</h3>
-                        <p class="text-gray-600 leading-relaxed">Maintain a balanced diet, exercise regularly, and avoid tobacco products.</p>
-                    </div>
-                    <div class="prevention-card">
-                        <h3 class="text-xl font-bold mb-4 text-gray-800">Sun Protection</h3>
-                        <p class="text-gray-600 leading-relaxed">Use sunscreen, wear protective clothing, and avoid excessive sun exposure.</p>
-                    </div>
-                    <div class="prevention-card">
-                        <h3 class="text-xl font-bold mb-4 text-gray-800">Know Your Risk</h3>
-                        <p class="text-gray-600 leading-relaxed">Understand your family history and discuss risk factors with your doctor.</p>
-                    </div>
+    <!-- Prevention Section -->
+    <div class="bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] py-24 px-8 h-100% mb-11">
+        <div class="w-4/5 mx-auto">
+            <h2 class="text-3xl font-bold mb-12 mt-4 text-center text-gray-800">Prevention Tips</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
+                <div class="prevention-card">
+                    <h3 class="text-xl font-bold mb-4 text-gray-800">Regular Screening</h3>
+                    <p class="text-gray-600 leading-relaxed">Schedule regular check-ups and cancer screenings as recommended by your healthcare provider.</p>
+                </div>
+                <div class="prevention-card">
+                    <h3 class="text-xl font-bold mb-4 text-gray-800">Healthy Lifestyle</h3>
+                    <p class="text-gray-600 leading-relaxed">Maintain a balanced diet, exercise regularly, and avoid tobacco products.</p>
+                </div>
+                <div class="prevention-card">
+                    <h3 class="text-xl font-bold mb-4 text-gray-800">Sun Protection</h3>
+                    <p class="text-gray-600 leading-relaxed">Use sunscreen, wear protective clothing, and avoid excessive sun exposure.</p>
+                </div>
+                <div class="prevention-card">
+                    <h3 class="text-xl font-bold mb-4 text-gray-800">Know Your Risk</h3>
+                    <p class="text-gray-600 leading-relaxed">Understand your family history and discuss risk factors with your doctor.</p>
                 </div>
             </div>
         </div>
