--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="flex justify-between items-center w-full px-20 h-24">
             <a href="index.html" class="font-bold text-3xl">OncoSmart</a>
             <ul class="flex justify-between w-2/5 text-xl max-lg:hidden">
-                <li><a href="#main" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">About</a></li>
-                <li><a href="./types.html" class="border-b-2 border-transparent hover:border-black anchor">Types</a></li>
+                <li><a href="index.html" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Registration</a></li>
+                <li><a href="CancerTypes/types.html" class="border-b-2 border-transparent hover:border-black anchor">Types</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Services</a></li>
                 <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Contact</a></li>
             </ul>
