Added some inductory text in both pages

--- a/registration/registrationDoctor.html
+++ b/registration/registrationDoctor.html
@@ -89,8 +89,9 @@
                 </div>
             </form>
         </div>
-        <div class="w-2/5 flex justify-center items-center max-lg:hidden">
+        <div class="w-2/5 flex justify-center flex-col items-center max-lg:hidden">
             <img src="../images/med.svg" alt="medical" class="w-3/5 mx-auto">
+            <p class="font-semibold text-2xl p-10">Become a part of OncoSmart and contribute to life-saving care by sharing your expertise with patients in need.</p>
         </div>
     </div>
 </body>
