--- a/registration/registrationPatient.html
+++ b/registration/registrationPatient.html
@@ -74,8 +74,9 @@
                 </div>
             </form>
         </div>
-        <div class="w-2/5 flex justify-center items-center max-lg:hidden">
+        <div class="w-2/5 flex flex-col justify-center items-center max-lg:hidden">
             <img src="../images/med.svg" alt="medical" class="w-3/5 mx-auto">
+            <p class="font-semibold text-2xl p-10">Join OncoSmart to access personalized resources and take proactive steps toward better health and well-being.</p>
         </div>
     </div>
 </body>
