Added About page

--- a/CancerTypes/types.html
+++ b/CancerTypes/types.html
@@ -11,29 +11,28 @@
 </head>
 <body class="overflow-x-hidden">
     <!-- main section -->
-    <div class="w-full h-[400px] bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] flex justify-start flex-col max-lg:h-full" id="main">
+    <div class="w-full h-[300px] bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] flex justify-start flex-col max-lg:h-full" id="main">
         <div class="flex justify-between items-center w-full px-20 h-24">
             <a href="../index.html" class="font-bold text-3xl">OncoSmart</a>
-            <ul class="flex justify-between w-2/5 text-xl max-lg:hidden">
+            <ul class="flex justify-between w-1/2 text-xl max-lg:hidden">
                 <li><a href="../index.html" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">About</a></li>
-                <li><a href="types.html" class="border-b-2 border-transparent hover:border-black anchor">Types</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Services</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Contact</a></li>
+                <li><a href="../About Us/about.html" class="border-b-2 border-transparent hover:border-black anchor">About Us</a></li>
+                <li><a href="types.html" class="border-b-2 border-transparent hover:border-black anchor">Types of Cancers</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Donate Us</a></li>
             </ul>
-            <img src="images/menu.png" alt="menu" class="hidden max-lg:block w-8" id="menu">
+            <img src="../images/menu.png" alt="menu" class="hidden max-lg:block w-8" id="menu">
         </div>
         <div class="w-screen py-6 duration-1000 translate-y-[-300%] backdrop-blur-md transition-transform flex justify-between items-center bg-[#ffffff79]" id="menuList">
             <ul class="flex justify-between w-3/5 text-xl pl-20 max-md:w-[90%] max-md:pl-4 max-sm:flex-col max-sm:pl-20 max-sm:gap-4">
-                <li><a href="index.html" class="border-b-2 border-transparent hover:border-black menuitems">Home</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">About</a></li>
-                <li><a href="types.html" class="border-b-2 border-black menuitems">Types</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">Contact</a></li>
+                <li><a href="..../About Us/about.htmlindex.html" class="border-b-2 border-transparent hover:border-black menuitems">Home</a></li>
+                <li><a href="../About Us/about.html" class="border-b-2 border-transparent hover:border-black menuitems">About Us</a></li>
+                <li><a href="types.html" class="border-b-2 hover:border-black menuitems">Types of Cancers</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">Donate Us</a></li>
             </ul>
-            <img src="images/close.png" alt="close" class="w-12 pr-6" id="close">
+            <img src="../images/close.png" alt="close" class="w-12 pr-6" id="close">
         </div>
         
-        <div class="flex w-full justify-center items-center px-20 relative">
+        <div class="flex w-full justify-center items-center px-20 pb-9 relative">
             <div class="text-center">
                 <h1 class="font-bold text-5xl pb-6 max-lg:py-9 max-sm:text-3xl">Types of Cancer</h1>
                 <p class="text-xl max-sm:text-lg">Understanding different types of cancer and their early warning signs</p>
@@ -367,12 +366,6 @@
         domain="www.chatbase.co">
     </script>
 
-    <!--Swiper JS script tag-->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- gsap Lib -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <script src="script.js"></script>
-    <script src="gsap.js"></script>
+    <script src="../header.js"></script>
 </body>
 </html>
