--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
     <div class="w-full h-[550px] bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] flex justify-start flex-col max-lg:h-full" id="main">
         <div class="flex justify-between items-center w-full px-20 h-24">
             <a href="index.html" class="font-bold text-3xl">OncoSmart</a>
-            <ul class="flex justify-between w-2/5 text-xl max-lg:hidden">
+            <ul class="flex justify-between w-1/2 text-xl max-lg:hidden">
                 <li><a href="index.html" class="border-b-2 border-transparent hover:border-black anchor">Home</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Registration</a></li>
-                <li><a href="CancerTypes/types.html" class="border-b-2 border-transparent hover:border-black anchor">Types</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Services</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Contact</a></li>
+                <li><a href="About Us/about.html" class="border-b-2 border-transparent hover:border-black anchor">About Us</a></li>
+                <li><a href="CancerTypes/types.html" class="border-b-2 border-transparent hover:border-black anchor">Types of Cancers</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black anchor">Donate Us</a></li>
             </ul>
             <img src="images/menu.png" alt="menu" class="hidden max-lg:block w-8" id="menu">
         </div>
         <div class="w-screen py-6 duration-1000 translate-y-[-300%] backdrop-blur-md transition-transform flex justify-between items-center bg-[#ffffff79]" id="menuList">
             <ul class="flex justify-between w-3/5 text-xl pl-20 max-md:w-[90%] max-md:pl-4 max-sm:flex-col max-sm:pl-20 max-sm:gap-4">
-                <li><a href="#main" class="border-b-2 border-transparent hover:border-black menuitems">Home</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">About</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">Services</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">Contact</a></li>
+                <li><a href="index.html" class="border-b-2 border-transparent hover:border-black menuitems">Home</a></li>
+                <li><a href="About Us/about.html" class="border-b-2 border-transparent hover:border-black menuitems">About Us</a></li>
+                <li><a href="CancerTypes/types.html" class="border-b-2 border-transparent hover:border-black menuitems">Types of Cancers</a></li>
+                <li><a href="#" class="border-b-2 border-transparent hover:border-black menuitems">Donate Us</a></li>
             </ul>
             <img src="images/close.png" alt="close" class="w-12 pr-6" id="close">
         </div>
@@ -131,6 +130,64 @@
       
       </div>
 
+      <div class="w-[90%] mx-auto my-11">
+        <h1 class="text-3xl font-bold text-center mb-10">Frequently Asked Questions</h1>
+        <div>
+            <div class="flex w-full bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] sliders justify-between items-center p-4 border-b-2 border-slate-400 cursor-pointer"> 
+                <p class="text-2xl">What is OncoSmart?</p>
+                <img src="images/add.png" alt="add" class="w-6">
+            </div>
+            <div class="h-0 overflow-hidden sliderAns bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] text-2xl border-b-2 border-slate-400 transition-height duration-1000">
+                <span>OncoSmart is an educational platform designed to raise awareness about cancer symptoms. It provides valuable resources, expert insights, and tools to help individuals recognize early warning signs and take proactive steps toward early detection.</span>
+            </div>
+        </div>
+        <div>
+            <div class="flex w-full bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] sliders justify-between items-center p-4 border-b-2 border-slate-400 cursor-pointer"> 
+                <p class="text-2xl">Who can use OncoSmart?</p>
+                <img src="images/add.png" alt="add" class="w-6">
+            </div>
+            <div class="h-0 overflow-hidden sliderAns bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] text-2xl border-b-2 border-slate-400 transition-height duration-1000">
+                <span>OncoSmart is for everyone. Whether you're a patient, a caregiver, or simply someone who wants to learn about cancer symptoms and prevention, our platform is designed to provide the information and support you need.</span>
+            </div>
+        </div>
+        <div>
+            <div class="flex w-full bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] sliders justify-between items-center p-4 border-b-2 border-slate-400 cursor-pointer"> 
+                <p class="text-2xl">What resources does OncoSmart offer?</p>
+                <img src="images/add.png" alt="add" class="w-6">
+            </div>
+            <div class="h-0 overflow-hidden sliderAns bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] text-2xl border-b-2 border-slate-400 transition-height duration-1000">
+                <span>OncoSmart offers a wealth of resources, including detailed guides on cancer symptoms, risk factors, and preventive measures. You’ll also find tools for self-assessment, expert articles, and access to support communities.</span>
+            </div>
+        </div>
+        <div>
+            <div class="flex w-full bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] sliders justify-between items-center p-4 border-b-2 border-slate-400 cursor-pointer"> 
+                <p class="text-2xl">How can I detect cancer symptoms early?</p>
+                <img src="images/add.png" alt="add" class="w-6">
+            </div>
+            <div class="h-0 overflow-hidden sliderAns bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] text-2xl border-b-2 border-slate-400 transition-height duration-1000">
+                <span>OncoSmart provides information about early warning signs for various types of cancer, such as persistent fatigue, unexplained weight loss, unusual lumps, or prolonged cough. Regular check-ups and awareness are key to early detection.</span>
+            </div>
+        </div>
+        <div>
+            <div class="flex w-full bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] sliders justify-between items-center p-4 border-b-2 border-slate-400 cursor-pointer"> 
+                <p class="text-2xl">Can OncoSmart replace a doctor?</p>
+                <img src="images/add.png" alt="add" class="w-6">
+            </div>
+            <div class="h-0 overflow-hidden sliderAns bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] text-2xl border-b-2 border-slate-400 transition-height duration-1000">
+                <span>No, OncoSmart is not a substitute for professional medical advice. While it provides valuable educational resources, we strongly encourage consulting a qualified healthcare professional for diagnosis and treatment.</span>
+            </div>
+        </div>
+        <div>
+            <div class="flex w-full bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] sliders justify-between items-center p-4 border-b-2 border-slate-400 cursor-pointer"> 
+                <p class="text-2xl">Is OncoSmart free to use?</p>
+                <img src="images/add.png" alt="add" class="w-6">
+            </div>
+            <div class="h-0 overflow-hidden sliderAns bg-gradient-to-r from-[#b0d9f7] to-[#e9c7d8] text-2xl border-b-2 border-slate-400 transition-height duration-1000">
+                <span>Yes, OncoSmart is free for everyone. Our mission is to make cancer awareness accessible to as many people as possible. All our educational resources are available without any cost.</span>
+            </div>
+        </div>
+    </div>
+    
 
     <!-- chatbot -->
     <script>
@@ -152,6 +209,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
+    <script src="header.js"></script>
     <script src="gsap.js"></script>
 </body>
 </html>
